--- a/VE_Conductor/VE_Conductor.vcproj
+++ b/VE_Conductor/VE_Conductor.vcproj
@@ -51,15 +51,9 @@
 				Name="VCPreBuildEventTool"
 				Description="Generating stubs. . ."
 				CommandLine="echo C++ stubs. . .
-$(OMNI_HOME)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I$(VJ_BASE_DIR)/include -C./skel ./idl/Observer.idl
-$(OMNI_HOME)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I$(VJ_BASE_DIR)/include -C./skel ./idl/VjObs.idl
+$(OMNI_HOME)\bin\omniidl -bcxx -Wbh=.h,s=.cpp -I$(VJ_BASE_DIR)/include -C./skel ./idl/Observer.idl
+$(OMNI_HOME)\bin\omniidl -bcxx -Wbh=.h,s=.cpp -I$(VJ_BASE_DIR)/include -C./skel ./idl/VjObs.idl
 echo Done.
-
-echo Java stubs. . .
-$(JAVA_HOME)\bin\idlj -fall -I$(VJ_BASE_DIR)/include -td ./java_stuff -I./idl ./idl/VjObs.idl
-$(JAVA_HOME)\bin\idlj -fall -I$(VJ_BASE_DIR)/include -td ./java_stuff -I./idl ./idl/Observer.idl
-echo Done
-
 "/>
 			<Tool
 				Name="VCPreLinkEventTool"/>
