changes to build ALL components of VE_Suite

--- a/VE_Installer/Makefile
+++ b/VE_Installer/Makefile
@@ -33,6 +33,8 @@
 DIRS= ${VE_SUITE_HOME}/VE_Builder/Translator \
       ${VE_SUITE_HOME}/VE_Builder/Preprocessor \
       ${VE_SUITE_HOME}/VE_Builder/Utilities \
+      ${VE_SUITE_HOME}/VESOpen \
+      ${VE_SUITE_HOME}/VE_CE \
       ${VE_SUITE_HOME}/VE_Conductor \
       ${VE_SUITE_HOME}/VE_Xplorer
 #      ${VE_SUITE_HOME}/VE_Builder/WX_Translator
@@ -46,11 +48,13 @@ all: $(DIRS)
 
 ${VE_SUITE_HOME}/VE_Builder/Translator \
 ${VE_SUITE_HOME}/VE_Builder/Preprocessor \
+${VE_SUITE_HOME}/VE_CE \
+${VE_SUITE_HOME}/VE_Conductor \
 ${VE_SUITE_HOME}/VE_Xplorer::
 	cd $@ && $(MAKE) -j
 #${VE_SUITE_HOME}/VE_Builder/WX_Translator
 
-${VE_SUITE_HOME}/VE_Conductor \
+${VE_SUITE_HOME}/VESOpen \
 ${VE_SUITE_HOME}/VE_Builder/Utilities::
 	cd $@ && $(MAKE)
 
